# NSTC-114-2218-E-A49-026

./: README.md
Action Chunk Prediction/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
Action Chunk Prediction/acp/: __init__.py
Action Chunk Prediction/acp/data/: collate.py  sequence_dataset.py  tokenizers.py
Action Chunk Prediction/acp/inference/: decode.py  export.py  run_inference.py  visualize.py
Action Chunk Prediction/acp/integration/: vla_moe_bridge.py
Action Chunk Prediction/acp/models/: action_chunk_predictor.py  boundary_detector.py  temporal_encoder.py
Action Chunk Prediction/acp/models/fast/: aggregator.py  chunk_sampler.py
Action Chunk Prediction/acp/models/vq/: codebook.py  quantizer_utils.py  vector_quantizer.py
Action Chunk Prediction/acp/training/: losses.py  optim.py  scheduler.py  train.py  trainer.py
Action Chunk Prediction/acp/utils/: checkpoint.py  config.py  distributed.py  logger.py  metrics.py  seed.py
Action Chunk Prediction/configs/: data.yaml  inference.yaml  model_acp.yaml  train.yaml
Action Chunk Prediction/docs/: DATA_FORMAT.md  DESIGN.md  EVALUATION.md  INTEGRATION.md
Action Chunk Prediction/examples/manipulation/: README.md
Action Chunk Prediction/examples/manipulation/sequences/: demo_seq_01.json
Action Chunk Prediction/scripts/: eval_acp.sh  infer_acp.sh  prepare_submodule.sh  preprocess_sequences.py  train_acp.sh
Floor Plan/: README.md  configuration.yaml  pyproject.toml
Room Plan Diffusion/: LICENSE  README.md  environment.yaml
VLA-MoE-Manipulation/: README .md  README.md  environment.yaml  requirements.txt  setup.py
(+66 files in other folders)
